Update to Spring Boot 3